--- a/Transfer_Learning/arxiv_version/summary.tex
+++ b/Transfer_Learning/arxiv_version/summary.tex
@@ -7,6 +7,6 @@ To capture and quantify the influence of transfer learning on visual reasoning, 
 We note that some of the proposed splits form tasks (e.g. Train on all but \textit{t}) which are complementary to well established ones in the literature, e.g. in Taskonomy~\cite{zamir2018taskonomy}.
 
 Our experiments on transfer learning showed the shortcomings of existing approaches, especially for video reasoning.  Hence, we designed a novel Memory-Augmented Neural Network model called SAMNet, with mechanisms to address these deficiencies.
-SAMNet showed significant improvements over SOTA models on the COG dataset for Video Reasoning  and achieved comparable performance on the CLEVR dataset for Image Reasoning.
+SAMNet showed significant improvements over state-of-the-art models on the COG dataset for Video Reasoning  and achieved comparable performance on the CLEVR dataset for Image Reasoning.
 It also demonstrated excellent generalization capabilities for temporal and reasoning transfer. Moreover, through the cautious use of fine-tuning, SAMNet's performance advanced even further.
 We hope that the proposed taxonomy, newly established reasoning transfer tasks, along with the provided baselines will bolster new research on both models and datasets for transfer learning on visual reasoning.
