--- a/Transfer_Learning/arxiv_version/submission_folder/v2/samnet.tex
+++ b/Transfer_Learning/arxiv_version/submission_folder/v2/samnet.tex
@@ -3,11 +3,11 @@
 %\begin{figure}[!b]
 %\begin{minipage}{0.43\textwidth}
 %	\centering
-%	\includegraphics[width=\textwidth]{../img/architecture/samnet_architecture4}
+%	\includegraphics[width=\textwidth]{figures/samnet_architecture4}
 %\end{minipage}\hfill
 %\begin{minipage}{0.55\textwidth}
 %	\centering
-%	\includegraphics[width=\textwidth]{../img/architecture/samcell_reasoning}
+%	\includegraphics[width=\textwidth]{figures/samcell_reasoning}
 %\end{minipage}\hfill
 %\caption{General architecture of SAMNet (left) and a single reasoning step in SAMCell (right)}
 %\label{fig:samnet}
@@ -24,7 +24,7 @@ iterative reasoning as proposed e.g. in MAC (Memory-Attention-Composition) Netwo
 
 \begin{figure*}
 	\centering
-	\includegraphics[width=\textwidth]{../img/architecture/SAMNETmodel}
+	\includegraphics[width=\textwidth]{figures/SAMNETmodel}
 	\caption{General architecture of SAMNet.}
 	\label{fig:samnet}\vspace{-10pt}
 \end{figure*}
@@ -116,7 +116,7 @@ Then:
 
 \begin{figure*}[htbp]
 	\centering
-	\includegraphics[width=0.9\textwidth]{../img/architecture/transfer_taxo}
+	\includegraphics[width=0.9\textwidth]{figures/transfer_taxo}
 	\caption{Transfer learning taxonomy.}
 	\label{fig:taskonomy}\vspace{-10pt}
 \end{figure*}
