--- a/Transfer_Learning/arxiv_version/submission_folder/v2/experiments.tex
+++ b/Transfer_Learning/arxiv_version/submission_folder/v2/experiments.tex
@@ -29,7 +29,7 @@ SAMNet reaches a comparable 96.2\% accuracy, with TbD achieving the best score o
 
 \begin{figure}[hbtp]
 	\centering
-	\includegraphics[width=0.5\textwidth]{../img/plots/clevr_baselines.pdf}
+	\includegraphics[width=0.5\textwidth]{figures/clevr_baselines.pdf}
 	\caption{Comparison of SAMNet to baselines on CLEVR.}
 	\label{fig:clevr_baselines}
 \end{figure}
@@ -60,7 +60,7 @@ description of tasks, as shown in~\cref{fig:task-groups}.
 
 \begin{figure}[hbtp]
 	\centering
-	\includegraphics[width=0.7\textwidth]{../img/architecture/hierarchy}
+	\includegraphics[width=0.7\textwidth]{figures/hierarchy}
 	\caption{Hierarchy of Task Groups in the COG dataset.}
 	\label{fig:task-groups}
 \end{figure}
@@ -85,12 +85,12 @@ The most important results are highlighted in~\cref{fig:samnet_cog_detailed}; fu
 	\centering
 	\begin{subfigure}{\textwidth}
 		\centering
-		\includegraphics[width=\textwidth]{../img/plots/cog_canonical_baseline_no_labels.pdf}
+		\includegraphics[width=\textwidth]{figures/cog_canonical_baseline_no_labels.pdf}
 	\end{subfigure}%
 	\newline
 	\begin{subfigure}{\textwidth}
 		\centering
-		\includegraphics[width=\textwidth]{../img/plots/cog_hard_baseline_labels.pdf}
+		\includegraphics[width=\textwidth]{figures/cog_hard_baseline_labels.pdf}
 	\end{subfigure}%
 	\caption{Comparison of test set accuracies of SAMNet (blue) with original results achieved by the baseline model~\cite{yang2018dataset} (dotted gray) on Canonical (top) and Hard (bottom) variants of the COG dataset.}
 	\label{fig:samnet_cog_detailed}\vspace{-10pt}
@@ -114,7 +114,7 @@ We also consider a direct test on CoGenT-A; and a test on CoGenT-A after fine-tu
 
 \begin{figure}[htbp]
 	\centering
-	\includegraphics[width=0.9\textwidth]{../img/plots/cogent_feature_transfer_baselines.pdf}
+	\includegraphics[width=0.9\textwidth]{figures/cogent_feature_transfer_baselines.pdf}
 	\caption{Feature transfer: test accuracies when transferring between CoGenT-A and CoGenT-B.}
 	\label{fig:CoGenT-B-results}
 \end{figure}
@@ -134,7 +134,7 @@ As the original paper~\cite{yang2018dataset} didn't provide such experiments, we
 
 \begin{figure}[b!]
 	\centering
-	\includegraphics[width=0.8\textwidth]{../img/plots/cog_temporal_transfer_baselines.pdf}
+	\includegraphics[width=0.8\textwidth]{figures/cog_temporal_transfer_baselines.pdf}
 	\caption{Temporal transfer capabilities of SAMNet (blue) and baseline models (gray -striped and -dotted) when moving from Canonical to Hard  in COG.}
 	\label{fig:samnet_cog_overall_transfer}
 \end{figure}
