--- a/Transfer_Learning/arxiv_version/submission_folder/v2/experiments_reasoning_transfer.tex
+++ b/Transfer_Learning/arxiv_version/submission_folder/v2/experiments_reasoning_transfer.tex
@@ -5,7 +5,7 @@ Using the question groups defined by the authors, we organized training and test
 
 \begin{figure}[htbp]
 	\centering
-	\includegraphics[width=0.8\textwidth]{../img/plots/cogent_reasoning_transfer.pdf}
+	\includegraphics[width=0.8\textwidth]{figures/cogent_reasoning_transfer.pdf}
 	\caption{Accuracies of SAMNet when testing its reasoning transfer capabilities on the CoGenT-A variant.}
 	\label{fig:cogent_reasoning_transfer}
 \end{figure}
@@ -35,7 +35,7 @@ This stems from the non-overlapping labels spaces of \textit{Count} (digits 0 to
 \label{sec:reasoning-transfer-cog}
 \begin{figure}[b!]
 	\centering
-	\includegraphics[width=0.8\textwidth]{../img/plots/cog_reasoning_transfer.pdf}
+	\includegraphics[width=0.8\textwidth]{figures/cog_reasoning_transfer.pdf}
 	\caption{Accuracies of SAMNet when testing its reasoning transfer capabilities on the Canonical variant of COG.}
 	\label{fig:cog_reasoning_transfer}
 \end{figure}
