--- a/Transfer_Learning/eccv_submission/eccv_paper_main.tex
+++ b/Transfer_Learning/eccv_submission/eccv_paper_main.tex
@@ -87,52 +87,31 @@
 \setlength{\parskip}{0pt}
 \setlength{\parsep}{0pt}}
 
-\newcommand*\samethanks[1][\value{footnote}]{\footnotemark[#1]}
-
 \begin{document}
 % \renewcommand\thelinenumber{\color[rgb]{0.2,0.5,0.8}\normalfont\sffamily\scriptsize\arabic{linenumber}\color[rgb]{0,0,0}}
 % \renewcommand\makeLineNumber {\hss\thelinenumber\ \hspace{6mm} \rlap{\hskip\textwidth\ \hspace{6.5mm}\thelinenumber}}
 % \linenumbers
 \pagestyle{headings}
 \mainmatter
-\def\ECCVSubNumber{100}  % Insert your submission number here
+\def\ECCVSubNumber{7169}
 
-\title{Transfer Learning in Visual and Relational Reasoning} % Replace with your title
+\title{Transfer Learning in Visual and Relational Reasoning}
 
 % INITIAL SUBMISSION
 \author{Anonymous ECCV submission}
 \institute{Paper ID \ECCVSubNumber}
 
+% CAMERA READY SUBMISSION
 \begin{comment}
-\author{T.S. Jayram\inst{1} \and  Vincent Marois\inst{2} \and Vincent Albouy\thanks{Work done while at IBM Research AI, Almaden Research Center} \and Tomasz Kornuta\inst{3}  \and Emre Sevgen\samethanks \and Ahmet Ozcan\inst{1}}
+\author{T.S. Jayram\inst{1} \and  Vincent Marois\inst{2} \and Vincent Albouy\thanks{Work done while at IBM Research AI, Almaden Research Center} \and Tomasz Kornuta\inst{3} \and Ahmet Ozcan\inst{1}}
 
+\authorrunning{T.S. Jayram et al.}
+% First names are abbreviated in the running head.
+% If there are more than two authors, 'et al.' is used.
 
 \institute{IBM Research AI, Almaden Research Center, San Jose, CA, USA\\ \email{\{jayram,  asozcan\}@us.ibm.com}
       \and IBM Research AI, Thomas J. Watson Research Center, York Town, NY, USA\\ \email{vincent.marois@ibm.com}
       \and NVIDIA, Santa Clara, CA, USA\\ \email{tkornuta@nvidia.com}}
-\end{comment}
-%******************
-
-% CAMERA READY SUBMISSION
-\begin{comment}
-\titlerunning{Abbreviated paper title}
-% If the paper title is too long for the running head, you can set
-% an abbreviated paper title here
-%
-\author{First Author\inst{1}\orcidID{0000-1111-2222-3333} \and
-Second Author\inst{2,3}\orcidID{1111-2222-3333-4444} \and
-Third Author\inst{3}\orcidID{2222--3333-4444-5555}}
-%
-\authorrunning{F. Author et al.}
-% First names are abbreviated in the running head.
-% If there are more than two authors, 'et al.' is used.
-%
-\institute{Princeton University, Princeton NJ 08544, USA \and
-Springer Heidelberg, Tiergartenstr. 17, 69121 Heidelberg, Germany
-\email{lncs@springer.com}\\
-\url{http://www.springer.com/gp/computer-science/lncs} \and
-ABC Institute, Rupert-Karls-University Heidelberg, Heidelberg, Germany\\
-\email{\{abc,lncs\}@uni-heidelberg.de}}
 \end{comment}
 %******************
 \maketitle
@@ -157,10 +136,8 @@ Transfer learning has become the de facto standard in computer vision and natura
 
 \clearpage
 % ---- Bibliography ----
-%
 % BibTeX users should specify bibliography style 'splncs04'.
 % References will then be sorted and formatted in the correct style.
-%
 \bibliographystyle{splncs04}
 \bibliography{../bibliography}
 \end{document}
