Small corrections throughout the paper.

--- a/Transfer_Learning/cvpr_2nd_submission/experiments.tex
+++ b/Transfer_Learning/cvpr_2nd_submission/experiments.tex
@@ -41,7 +41,7 @@ We first investigate feature transfer using CLEVR-CoGenT, followed by temporal t
 CLEVR images contain objects characterized by a set of attributes (shape, color, size and material). The questions are grouped into 5 categories: \textit{Exist}, \textit{Count}, \textit{CompareInteger}, \textit{CompareAttribute}, \textit{QueryAttribute}.
 The CLEVR authors also introduced CLEVR-CoGenT (Constrained Generalization Test), containing 2 variants, CoGenT-A and CoGenT-B, with varying combinations of color-shape attributes.
 The colors are partitioned into two complementary families:
-Gray, Blue, Brown and Yellow in Family A; and Red, Green, Purple, Cyan in Family B.
+Gray, Blue, Brown, Yellow in Family A; and Red, Green, Purple, Cyan in Family B.
 The cubes and cylinders take colors from complementary families in each variant with opposite configurations; the spheres can take any color in both variants (See~\cref{tab:cogent_conditions}).
 As the input domain consist of the set of objects with all attribute values, both variants differ by their marginal distributions $P_S$ and $P_T$.
 
