Make copy of source tex files + correct figures sizes / positions.

--- a/Transfer_Learning/eccv_submission/eccv_paper_main.tex
+++ b/Transfer_Learning/eccv_submission/eccv_paper_main.tex
@@ -121,18 +121,18 @@ Transfer learning has become the de facto standard in computer vision and natura
 \end{abstract}
 
 %%%%%%%%% BODY TEXT
-\input{../cvpr_2nd_submission/introduction}
+\input{introduction}
 
-\input{../cvpr_2nd_submission/related_work}
+\input{related_work}
 
-\input{../cvpr_2nd_submission/samnet}
+\input{samnet}
 
-\input{../cvpr_2nd_submission/transfer_learning}
+\input{transfer_learning}
 
-\input{../cvpr_2nd_submission/experiments}
-\input{../cvpr_2nd_submission/experiments_reasoning_transfer}
+\input{experiments}
+\input{experiments_reasoning_transfer}
 
-\input{../cvpr_2nd_submission/summary}
+\input{summary}
 
 \clearpage
 % ---- Bibliography ----
