Changed font to respect constraint and trying to respect page limit.

--- a/Transfer_Learning/eccv_submission/eccv_paper_main.tex
+++ b/Transfer_Learning/eccv_submission/eccv_paper_main.tex
@@ -3,10 +3,12 @@
 
 \documentclass[runningheads]{llncs}
 \usepackage{amsmath,amssymb,amsfonts,bm} % define this before the line numbering.
-\usepackage{times}
 \usepackage{graphicx}
 \usepackage{comment}
 \usepackage[font=small]{subcaption}
+\captionsetup[figure]{skip=5pt}
+\captionsetup[table]{skip=5pt}
+%\setlength{\belowcaptionskip}{-15pt}  % reduce padding below figure
 \usepackage{color}
 
 % INITIAL SUBMISSION - The following two lines are NOT commented
