--- a/Transfer_Learning/eccv_submission/experiments.tex
+++ b/Transfer_Learning/eccv_submission/experiments.tex
@@ -74,7 +74,7 @@ description of tasks, as shown in~\cref{fig:task-groups}.
 
 \begin{figure}[b!]
 	\centering
-	\includegraphics[width=\columnwidth]{../img/architecture/hierarchy}
+	\includegraphics[width=0.5\columnwidth]{../img/architecture/hierarchy}
 	\caption{Hierarchy of Task Groups in the COG dataset.}
 	\label{fig:task-groups}
 \end{figure}
@@ -132,7 +132,7 @@ As the original paper~\cite{yang2018dataset} didn't provide such experiments, we
 
 \begin{figure}[htbp]
 	\centering
-	\includegraphics[width=\columnwidth]{../img/plots/cog_temporal_transfer_baselines.pdf}
+	\includegraphics[width=0.8\columnwidth]{../img/plots/cog_temporal_transfer_baselines.pdf}
 	\caption{Temporal transfer capabilities of SAMNet (blue) and baseline models (gray -striped and -dotted) when moving from Canonical to Hard  in COG.}
 	\label{fig:samnet_cog_overall_transfer}
 \end{figure}
