Reduced \belowcaptionskip to fit within page limit.

--- a/Transfer_Learning/eccv_submission/eccv_paper_main.tex
+++ b/Transfer_Learning/eccv_submission/eccv_paper_main.tex
@@ -8,7 +8,7 @@
 \usepackage[font=small]{subcaption}
 \captionsetup[figure]{skip=5pt}
 \captionsetup[table]{skip=5pt}
-%\setlength{\belowcaptionskip}{-15pt}  % reduce padding below figure
+\setlength{\belowcaptionskip}{-10pt}  % reduce padding below figure
 \usepackage{color}
 
 % INITIAL SUBMISSION - The following two lines are NOT commented
